== 0.1 (28.09.2012):
- Initial release.

== 0.1.1 (01.10.2012):
- Fixed infinite loop with -O2.

== 0.1.2 (25.10.2012):
- Fixed controls names sometimes not displayed on 32bit systems.
- Added 1/2/3/4/5 as synonym for F1/F2/F3/F4/F5 (by @arandomuser).
- Properly removing observers from notification center.

== 0.1.3 (24.11.2012):
- Fixed controls sometimes displaying wrong values at start.
- Fixed Monitor controls changing monitored sink values.
- Using @protocol to avoid "multiple definitions" warnings.
- Fixed single channel controls being printed too much to the left.
- Fixed a corner case in disappearing controls removal.
- Fixed some setFilter corner cases causing screen corruptions.
- Fixed hidden widgets getting reprinted when changed outside the app.

== 0.2:
- Ability to filter out PA internals/Monitors.
- Properly dealing with non-existing/lost connections.
- Fixed m/j/k crash when used on empty page.
- Fixed possible mix-up of SINK and SINK_INPUT controls.
- Fixed hidden controls sometimes not properly removed when gone.